tests/baselines/reference/doExpressionReturn.errors.txt
tests/cases/compiler/doExpressionReturn.ts(8,20): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/compiler/doExpressionReturn.ts(21,9): error TS7030: Not all code paths return a value.
tests/cases/compiler/doExpressionReturn.ts(22,24): error TS7030: Not all code paths return a value.
tests/cases/compiler/doExpressionReturn.ts(24,9): error TS7030: Not all code paths return a value.
tests/cases/compiler/doExpressionReturn.ts(25,24): error TS7030: Not all code paths return a value.
tests/cases/compiler/doExpressionReturn.ts(27,9): error TS7030: Not all code paths return a value.
tests/cases/compiler/doExpressionReturn.ts(28,24): error TS7030: Not all code paths return a value.
tests/cases/compiler/doExpressionReturn.ts(35,13): error TS7030: Not all code paths return a value.
tests/cases/compiler/doExpressionReturn.ts(40,13): error TS7030: Not all code paths return a value.
tests/cases/compiler/doExpressionReturn.ts(45,13): error TS7030: Not all code paths return a value.


==== tests/cases/compiler/doExpressionReturn.ts (10 errors) ====
    declare let v: boolean
    
    function returnTypeInfer() {
        const y = do { return 1 }
    }
    
    function returnTypeCheck(): string {
        const y = do { return 1 }
                       ~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    }
    
    function avoidFalsePositive() {
        const y = do {
            function z() {
                return 1
            }
            1
        }
    }
    
    function tryCatch() {
        try {
            ~
            const y = do { if (v) return; 1; }
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                           ~~~~~~~~~~~~~~
!!! error TS7030: Not all code paths return a value.
        } catch { 1 }
    ~~~~~
!!! error TS7030: Not all code paths return a value.
        try {
            ~
            const y = do { if (v) return; 1; }
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                           ~~~~~~~~~~~~~~
!!! error TS7030: Not all code paths return a value.
        } catch (e) { 1 }
    ~~~~~
!!! error TS7030: Not all code paths return a value.
        try {
            ~
            const y = do { if (v) return; 1; }
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                           ~~~~~~~~~~~~~~
!!! error TS7030: Not all code paths return a value.
        } catch ({ a = 1 }) { 1 }
    ~~~~~
!!! error TS7030: Not all code paths return a value.
    }
    
    function avoidSignatureToBeCaptured(): void {
        const a = do {
            try {
                if (v) return; 1;
                ~~~~~~~~~~~~~~
!!! error TS7030: Not all code paths return a value.
            } catch { 1 }
        };
        const b = do {
            try {
                if (v) return; 1;
                ~~~~~~~~~~~~~~
!!! error TS7030: Not all code paths return a value.
            } catch (d) { 1 }
        };
        const c = do {
            try {
                if (v) return; 1;
                ~~~~~~~~~~~~~~
!!! error TS7030: Not all code paths return a value.
            } catch ({ a = 1 }) { 1 }
        };
    }
    